feat: dp87 Migrate from yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0"
   }
 }
