--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,23 +17,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Read .tool-versions
-        id: tool-versions
-        run: |
-          NODE_VERSION=$(grep nodejs .tool-versions | awk '{print $2}')
-          PNPM_VERSION=$(grep pnpm .tool-versions | awk '{print $2}')
-          echo "node-version=$NODE_VERSION" >> $GITHUB_OUTPUT
-          echo "pnpm-version=$PNPM_VERSION" >> $GITHUB_OUTPUT
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ steps.tool-versions.outputs.node-version }}
+      - name: Get pnpm version
+        id: pnpm-version
+        run: echo "version=$(grep pnpm .tool-versions | cut -d' ' -f2)" >> $GITHUB_OUTPUT
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ steps.tool-versions.outputs.pnpm-version }}
+          version: ${{ steps.pnpm-version.outputs.version }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .tool-versions
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -51,24 +48,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Read .tool-versions
-        id: tool-versions
-        run: |
-          NODE_VERSION=$(grep nodejs .tool-versions | awk '{print $2}')
-          PNPM_VERSION=$(grep pnpm .tool-versions | awk '{print $2}')
-          echo "node-version=$NODE_VERSION" >> $GITHUB_OUTPUT
-          echo "pnpm-version=$PNPM_VERSION" >> $GITHUB_OUTPUT
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ steps.tool-versions.outputs.node-version }}
-          registry-url: 'https://registry.npmjs.org'
+      - name: Get pnpm version
+        id: pnpm-version
+        run: echo "version=$(grep pnpm .tool-versions | cut -d' ' -f2)" >> $GITHUB_OUTPUT
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ steps.tool-versions.outputs.pnpm-version }}
+          version: ${{ steps.pnpm-version.outputs.version }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .tool-versions
+          cache: 'pnpm'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
